Alterações referentes a datas

--- a/index.html
+++ b/index.html
@@ -942,10 +942,11 @@
 							<div class="tab-pane fade" id="artigos_6" role="tabpanel" aria-labelledby="artigos_6_tabs">
 								<h3>Datas Importantes</h3>
 								<ul>
-									<li>Submissão de Trabalhos: 09 a 31 de agosto de 2018</li>
-									<p style="font-weight: bold; font-size: 1.5em; text-decoration-line: underline">Data de Submissão Prorrogada até 31 de agosto de 2018</p>
-									<li>Divulgação dos resultados: 01/09/2018</li>
-									<li>Inscrições dos Trabalhos aprovados: 03 a 21 de setembro de 2018</li>
+									<li>Submissão de Trabalhos: 09 a 24 de setembro de 2018</li>
+									<p style="font-weight: bold; font-size: 1.5em; text-decoration-line: underline">Data de Submissão Prorrogada até 24 de setembro de 2018</p>
+									<li style="font-weight: bold;">Divulgação dos resultados da 1° etapa de submissão de trabalhos: 05/09/2018</li>
+									<li>Divulgação dos resultados da 2° etapa de submissão de trabalhos: 01/10/2018</li>
+									<li>Inscrições dos Trabalhos aprovados: 01 a 10 de outubro de 2018</li>
 									<li>Divulgação da programação detalhada do evento: 16/10/2018</li>
 									<li>Inscrições para o público em geral (sujeito à disponibilidade de vagas): 24/09/2018 a 12/10/2018</li>
 									<br>
