Adcionado o arquivo de resultados, alterado datas de submissão de artigos, e adcionado o inscrever-se

--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
 								</tr>
 							</tbody>
 						</table>
-						<!-- <a href="" data-toggle="modal" data-target="#exampleModal">Inscrever-se</a> -->
+						<a href="https://docs.google.com/forms/d/1-ZyPkfWgcotzpXz-CSgGxT-hOTpVtWBcTxj3MFpdfZw/viewform?ts=5b8d9692">Inscrever-se</a>
 					</div>
 					<div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
 						<h3>Estudantes de Pós-Graduação, docentes e outros profissionais</h3>
@@ -806,7 +806,7 @@
 									</tr>
 								</tbody>
 						</table>
-						<!-- <a href="" data-toggle="modal" data-target="#exampleModal">Inscrever-se</a> -->
+						<a href="https://docs.google.com/forms/d/1-ZyPkfWgcotzpXz-CSgGxT-hOTpVtWBcTxj3MFpdfZw/viewform?ts=5b8d9692">Inscrever-se</a>
 					</div>
 					<div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
 						<h3>Estudantes de Graduação, Pós-Graduação, docentes e outros profissionais (Com apresentação de trabalho)</h3>
@@ -818,13 +818,13 @@
 										<th>Valor</th>
 									</tr>
 									<tr>
-										<td>03/09 até 21/09</td>
+										<td>01/10 até 10/10</td>
 										<td>Inscrição de trabalhos aprovados;</td>
 										<td>R$ 90,00</td>
 									</tr>
 								</tbody>
 						</table>
-						<!-- <a href="" data-toggle="modal" data-target="#exampleModal">Inscrever-se</a> -->
+						<a href="https://docs.google.com/forms/d/1-ZyPkfWgcotzpXz-CSgGxT-hOTpVtWBcTxj3MFpdfZw/viewform?ts=5b8d9692">Inscrever-se</a>
 					</div>
 				</div>
 				<!--<p><em>OBS: Os valores não incluem a inscrição nos minicursos. O participante tem direito a no máximo dois minicursos no valor de R$ 5,00 cada.</em></p>-->
@@ -942,7 +942,7 @@
 							<div class="tab-pane fade" id="artigos_6" role="tabpanel" aria-labelledby="artigos_6_tabs">
 								<h3>Datas Importantes</h3>
 								<ul>
-									<li>Submissão de Trabalhos: 09 a 24 de setembro de 2018</li>
+									<li>Submissão de Trabalhos: até 24 de setembro de 2018</li>
 									<p style="font-weight: bold; font-size: 1.5em; text-decoration-line: underline">Data de Submissão Prorrogada até 24 de setembro de 2018</p>
 									<li style="font-weight: bold;">Divulgação dos resultados da 1° etapa de submissão de trabalhos: 05/09/2018</li>
 									<li>Divulgação dos resultados da 2° etapa de submissão de trabalhos: 01/10/2018</li>
@@ -956,6 +956,30 @@
 							</div>
 						</div>
 					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id="artigos" class="sub-trabalhos">
+			<h2 data-aos="fade-left">Resultados 1° Etapa</h2>
+			<div class='container-fluid'>
+				<div class='row'>
+					<div class="col-md-3"></div>
+					<div class="col-md-6">
+						<div data-aos="fade-right" class="card card-shadow">
+							<figure>
+								<div class="container-fluid">
+									<div class="row">
+										<div style="display: flex;flex-direction: column;">
+											<p style="text-align: center;font-weight: bold;">Segue abaixo no link, a lista de trabalhos aprovados na 1° etapa de submissão ao I FÓRUM DA REDE DE GESTÃO PÚBLICA DO PIAUÍ </p>
+											<a href="assets/pdfs/Resultados.pdf" style="text-align: center;font-weight: bold;font-size: 1.5em;">Lista de aprovados</a>
+										</div>
+									</div>
+								</div>
+							</figure>
+						</div>
+					</div>
+					
 				</div>
 			</div>
 		</section>
