Realizada as mudanças da convidada Everangela

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 												<br>
 												MESA 02: Gestão Participativa
 												<br>MEDIADOR: <em>Prof. Dr. Francisco Mesquita de Oliveira (UFPI)</em>
-												<br>DEBATEDORES:<em>Everângela Araújo Barros Parente (Promotora de Justiça do Ministério Público do Estado do Piauí) e Maria Rachel de Castro (Gerente de Administração do HU-UFPI/EBSERH)</em>
+												<br>DEBATEDORES:<em>Fabiana Pinto de Almeida Bizarria (Psicóloga do Trabalho da Universidade da Integração Internacional da Lusofonia Afro-Brasileira) e Maria Rachel de Castro (Gerente de Administração do HU-UFPI/EBSERH)</em>
 											</td>
 											<td><i class="fas fa-map-marker-alt"></i>&nbsp;CCHL</td>
 										</tr>
@@ -488,12 +488,12 @@
 									<div class="container-fluid">
 										<div class="row">
 											<div class="col-md-6">
-											<a><img src="assets/img/convidados/p5.png" alt="Everângela Araújo Barros Parente" title="Everângela Araújo Barros Parente"></a>
+											<a><img src="assets/img/convidados/p5.png" alt="Fabiana Pinto de Almeida Bizarria" title="Fabiana Pinto de Almeida Bizarria"></a>
 											</div>
 											<div class="col-md-6">
 											<div class="legenda">
-												<figcaption>Everângela Araújo Barros Parente</figcaption>
-												<label style="font-size: 0.8em">Promotora de Justiça do Ministério Público do Estado do Piauí.</label>
+												<figcaption>Fabiana Pinto de Almeida Bizarria</figcaption>
+												<label style="font-size: 0.8em">Psicóloga do Trabalho da Universidade da Integração Internacional da Lusofonia Afro-Brasileira</label>
 											</div>
 											</div>
 										</div>
