Adcionado aviso referente à inscrição e adcionado a lista de aprovados da segunda etapa

--- a/index.html
+++ b/index.html
@@ -832,6 +832,28 @@
 		</section>
 
 		<section id="artigos" class="sub-trabalhos">
+			<div class='container-fluid'>
+				<div class='row'>
+					<div class="col-md-3"></div>
+					<div class="col-md-6">
+						<div data-aos="fade-right" class="card card-shadow">
+							<figure>
+								<div class="container-fluid">
+									<div class="row">
+										<div style="display: flex;flex-direction: column;">
+											<p style="text-align: center;font-weight: bold; margin: 1em;">Comunicamos que o pagamento das inscrições iniciarão dia 04 e se estenderá até dia 16/10/18. Em breve informaremos o número da conta e os procedimentos para pagamento e confirmação da inscrição.</p>
+										</div>
+									</div>
+								</div>
+							</figure>
+						</div>
+					</div>
+					
+				</div>
+			</div>
+		</section>
+
+		<section id="artigos" class="sub-trabalhos">
 			<h2>Submissão de Trabalhos</h2>
 			<div class="container-fluid">
 				<div class="row">
@@ -971,8 +993,32 @@
 								<div class="container-fluid">
 									<div class="row">
 										<div style="display: flex;flex-direction: column;">
-											<p style="text-align: center;font-weight: bold;">Segue abaixo no link, a lista de trabalhos aprovados na 1° etapa de submissão ao I FÓRUM DA REDE DE GESTÃO PÚBLICA DO PIAUÍ </p>
+											<p style="text-align: center;font-weight: bold; margin: 1em;">Segue abaixo no link, a lista de trabalhos aprovados na 1° etapa de submissão ao I FÓRUM DA REDE DE GESTÃO PÚBLICA DO PIAUÍ </p>
 											<a href="assets/pdfs/Resultados.pdf" style="text-align: center;font-weight: bold;font-size: 1.5em;">Lista de aprovados</a>
+										</div>
+									</div>
+								</div>
+							</figure>
+						</div>
+					</div>
+					
+				</div>
+			</div>
+		</section>
+
+		<section id="artigos" class="sub-trabalhos">
+			<h2 data-aos="fade-left">Resultados 2° Etapa</h2>
+			<div class='container-fluid'>
+				<div class='row'>
+					<div class="col-md-3"></div>
+					<div class="col-md-6">
+						<div data-aos="fade-right" class="card card-shadow">
+							<figure>
+								<div class="container-fluid">
+									<div class="row">
+										<div style="display: flex;flex-direction: column;">
+											<p style="text-align: center;font-weight: bold; margin: 1em;">Segue abaixo no link, a lista de trabalhos aprovados na 2° etapa de submissão ao I FÓRUM DA REDE DE GESTÃO PÚBLICA DO PIAUÍ </p>
+											<a href="assets/pdfs/Resultados_2.pdf" style="text-align: center;font-weight: bold;font-size: 1.5em;">Lista de aprovados</a>
 										</div>
 									</div>
 								</div>
