Adcionado os avisos e dados bancarios

--- a/index.html
+++ b/index.html
@@ -854,6 +854,65 @@
 		</section>
 
 		<section id="artigos" class="sub-trabalhos">
+			<div class='container-fluid'>
+				<div class='row'>
+					<div class="col-md-3"></div>
+					<div class="col-md-6">
+						<div data-aos="fade-right" class="card card-shadow">
+							<figure>
+								<div class="container-fluid">
+									<div class="row">
+										<div style="display: flex;flex-direction: column;">
+											<p style="text-align: center;font-weight: bold; margin: 1em;">As inscrições serão confirmadas a partir do envio do comprovante de pagamento por e-mail (forumdegestaopublica@ufpi.edu.br ) ou apresentado na Coordenação do Programa de Pós-Graduação em Gestão Pública, endereço:
+											<br>	
+											<br><strong>UNIVERSIDADE FEDERAL DO PIAUÍ-UFPI</strong>
+											<br><strong>CAMPUS UNIVERSITÁRIO MINISTRO PETRÔNIO PORTELLA</strong>
+											<br><strong>CENTRO DE CIÊNCIAS HUMANAS E LETRAS- CCHL</strong>
+											<br><strong>PROGRAMA DE PÓS-GRADUAÇÃO EM GESTÃO PÚBLICA-PPGP (ESPAÇO INTEGRADO I, SALA 13)</strong>
+											<br><strong>BAIRRO ININGA</strong>
+											<br><strong>TERESINA-PI</strong>
+											<br><strong>64049-550</strong></p>
+										</div>
+									</div>
+								</div>
+							</figure>
+						</div>
+					</div>
+					
+				</div>
+			</div>
+		</section>
+
+		<section id="artigos" class="sub-trabalhos">
+			<div class='container-fluid'>
+				<div class='row'>
+					<div class="col-md-3"></div>
+					<div class="col-md-6">
+						<div data-aos="fade-right" class="card card-shadow">
+							<figure>
+								<div class="container-fluid">
+									<div class="row" style="justify-content: center;">
+										<div style="display: flex;flex-direction: column;">
+											<p style="text-align: center; margin: 1em;">
+											Dados bancários para pagamento:
+											<br>
+												Banco do Brasil
+												<br>Agência 3791-5
+												<br>Conta 10.430-2
+												<br>FADEX I F GES PUBLICA''
+											</p>
+										</div>
+									</div>
+								</div>
+							</figure>
+						</div>
+					</div>
+					
+				</div>
+			</div>
+		</section>
+
+		<section id="artigos" class="sub-trabalhos">
 			<h2>Submissão de Trabalhos</h2>
 			<div class="container-fluid">
 				<div class="row">
