Realizada as modificações

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<title>I Fórum da rede de gestão pública do Píaui</title>
+	<title>Fórum da Rede de Gestão Pública do Píaui</title>
 	
 	<meta charset="utf-8">
 	<meta http-equiv="content-type" content="text/html">
 	<meta name="description" content="A Escola Regional de Informática do Piauí tem como objetivo promover a disseminação de conhecimentos e experiências agregando as instituições de ensino superior do estado Piauí.">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no">
-	<meta name="keywords" content="REGEP 2018, Forum da rede de gestao publica do piaui, Gestao Publica, REGEP, Eventos UFPI, UFPI, Eventos Gestão">
+	<meta name="keywords" content="REGEPI 2018, Forum da rede de gestao publica do piaui, Gestao Publica, REGEPI, Eventos UFPI, UFPI, Eventos Gestão">
 
 	<!--FACEBOOK-->
 	<meta property="og:locale" content="pt_BR">
 	<meta property="og:url" content="">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="I Fórum da rede de gestão pública do Píaui">
+	<meta property="og:title" content="Fórum da Rede de Gestão Pública do Píaui">
 	<meta property="og:description" content="O evento privilegiará o debate aprofundado entre os participantes a respeito dos Temas de Interesse do encontro">
 	<meta property="og:image" itemprop="image" content="">
 	<meta property="og:image:width" content="393">
@@ -110,17 +110,28 @@
 						</figure>
 					</div>
 					<div class="col-md-6 sobre" data-aos="fade-left">
-						<p>O I Fórum da Rede de Gestão Pública do Piauí – REGEP traz como tema “Inovação na Gestão Pública” e será realizado nos dias 24, 25 e 26 de outubro de 2018, na Universidade Federal do Piauí, através do Programa de Pós-Graduação em Gestão Pública, com o apoio da Controladoria Geral da União, Tribunal de Contas da União, Embrapa Meio Norte e Ministério da Fazenda.</p>
+						<p>O Fórum da Rede de Gestão Pública do Piauí – REGEPI traz como tema “Inovação na Gestão Pública” e será realizado nos dias 24, 25 e 26 de outubro de 2018, na Universidade Federal do Piauí, através do Programa de Pós-Graduação em Gestão Pública, com o apoio da Controladoria Geral da União, Tribunal de Contas da União, Embrapa Meio Norte e Ministério da Fazenda.</p>
 
 						<p>O evento constitui um espaço de discussão entre gestores públicos, pesquisadores, professores e alunos de cursos de graduação e de pós-graduação com o intuito de criar um intercâmbio de ideias, opiniões, experiências e visões acerca de uma gestão pública com maior qualidade e eficiência.</p>
 					</div>
 				</div>
 			</div>
-			<h2 id="comissao" data-aos="flip-right">Comissões</h2>
+			<h2 id="comissao" data-aos="flip-right">Expediente</h2>
 			<div class="container-fluid" data-aos="fade-up">
 				<div class="row">
 					<div class="col-lg-7">
-
+						<ul>
+							<li><strong>Periodicidade da publicação:</strong>anual</li>
+							<li><strong>Idioma que serão aceitos os artigos:</strong>Português</li>
+						</ul>
+						<h3>Editor</h3>
+							<ul>
+								<li><strong>Autor Corporativo:</strong>Universidade Federal do Piauí</li>
+								<li>Programa de Pós-Graduação em Gestão Pública</li>
+								<li><strong>CEP:</strong>64049-550</li>
+								<li><a href="www.ppgp.ufpi.br" target="blank">www.ppgp.ufpi.br</a></li>
+								<li><strong>Contato:</strong>forumdegestaopublica@ufpi.edu.br</li>
+							</ul>
 						<h3>Comissão Organizadora</h3>
 						<ul>
 							<li>Prof (a). Dr(a). Fabiana Rodrigues de Almeida Castro (Docente no Programa de Pós Graduação Gestão Pública)</li>
@@ -130,10 +141,8 @@
 							<li>Maria da Conceição Angélica Santos (Controladoria Geral da União)</li>
 							<li>Prof. Dr. Francisco Mesquita de Oliveira (Docente no Programa de Pós Graduação Gestão Pública)</li>
 							<li>Discente Joésia Saibrosa da Silva (Mestrado em Gestão Pública)</li>
-							<li>Discente Jorge Cleber Pereira da Silva (Mestrado em Gestão Pública)</li>
 							<li>Msc. Leila Leal Leite (Hospital Universitário)</li>
 						</ul>
-
 						<h3>Comissão Científica</h3>
 						<ul>
 							<li>Prof. Dr. Alexandre Rabêlo Neto</li>
@@ -157,7 +166,6 @@
 							<li>Profa. Dra. Fabiana Rodrigues de Almeida Castro</li>
 							<li>Profa. Dra. Shaiane Vargas da Silveira</li>
 						</ul>
-
 					</div>
 					<div class="col-lg-5" data="facebook-feed">
 						<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FI-F%25C3%25B3rum-da-Rede-de-Gest%25C3%25A3o-P%25C3%25BAblica-do-Piau%25C3%25AD-659170231097144%2F&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=331238907306120" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
@@ -203,8 +211,13 @@
 								<table class="table table-striped">
 									<tbody>
 										<tr>
-											<td><i class="far fa-clock"></i>&nbsp; 16:00 - 19:00</td>
+											<td><i class="far fa-clock"></i>&nbsp; 16:00 - 18:00</td>
 											<td>Credenciamento</td>
+											<td><i class="fas fa-map-marker-alt"></i>&nbsp; Cineteatro</td>
+										</tr>
+										<tr>
+											<td><i class="far fa-clock"></i>&nbsp; 18:00 - 19:00</td>
+											<td>Abertura</td>
 											<td><i class="fas fa-map-marker-alt"></i>&nbsp; Cineteatro</td>
 										</tr>
 										<tr>
@@ -267,7 +280,7 @@
 											<td>
 												Apresentação dos Painéis 
 											</td>
-											<td><i class="fas fa-map-marker-alt"></i>&nbsp; Espaço Rosa Dos Ventos</td>
+											<td><i class="fas fa-map-marker-alt"></i>&nbsp; Hall 1 do Centro de Ciências Humanas e Letras (CCHL)</td>
 										</tr>
 									</tbody>
 								</table>
@@ -818,7 +831,7 @@
 										<th>Valor</th>
 									</tr>
 									<tr>
-										<td>01/10 até 10/10</td>
+										<td>01/10 até 16/10</td>
 										<td>Inscrição de trabalhos aprovados;</td>
 										<td>R$ 90,00</td>
 									</tr>
@@ -841,7 +854,7 @@
 								<div class="container-fluid">
 									<div class="row">
 										<div style="display: flex;flex-direction: column;">
-											<p style="text-align: center;font-weight: bold; margin: 1em;">Comunicamos que o pagamento das inscrições iniciarão dia 04 e se estenderá até dia 16/10/18. Em breve informaremos o número da conta e os procedimentos para pagamento e confirmação da inscrição.</p>
+											<p style="text-align: center;font-weight: bold; margin: 1em;">Comunicamos que o pagamento das inscrições iniciará dia 04 e se estenderá até dia 16/10/18. Em breve informaremos o número da conta e os procedimentos para pagamento e confirmação da inscrição.</p>
 										</div>
 									</div>
 								</div>
@@ -942,14 +955,14 @@
 						<div class="tab-content" id="v-pills-tabContent">
 							<div class="tab-pane fade show active" id="artigos_1" role="tabpanel" aria-labelledby="artigos_1_tabs">
 								<h3>Chamada de Trabalhos</h3>
-								<p>O Comitê de organização do I Fórum da Rede de Gestão Pública do Piauí convida professores, alunos de graduação e pós-graduação e profissionais da área de gestão pública e afins a submeter artigos científicos ou relatos técnicos (painéis).</p>
+								<p>O Comitê de organização do Fórum da Rede de Gestão Pública do Piauí convida professores, alunos de graduação e pós-graduação e profissionais da área de gestão pública e afins a submeter artigos científicos ou relatos técnicos (painéis).</p>
 								<p>Cada trabalho será julgado segundo sua relevância técnico-científica, adequação ao evento, estrutura, qualidade do texto, resultados apresentados, dentre outros.</p>
 								<p>Trabalhos fora desse padrão serão sumariamente rejeitados. A aceitação de um trabalho implica que pelo menos um dos seus autores irá se inscrever no evento para apresentá-lo em sessão temática oral ou na forma de painel.</p>
 							</div>
 							<div class="tab-pane fade" id="artigos_2" role="tabpanel" aria-labelledby="artigos_2_tabs">
 								<h3>Regras Gerais para Submissão</h3>
 								<ul>
-									<li>Os interessados deverão enviar texto completo de pesquisa em andamento ou concluída para avaliação do Comitê Científico do I Fórum da Rede de Gestão Pública do Piauí.</li>
+									<li>Os interessados deverão enviar texto completo de pesquisa em andamento ou concluída para avaliação do Comitê Científico do Fórum da Rede de Gestão Pública do Piauí.</li>
 									<li>O texto completo deverá ser enviado, obrigatoriamente, em formato WORD (.doc ou .docx) e tamanho máximo de 4 MB,envviados ao e-mail <strong>forumdegestaopublica@ufpi.edu.br</strong></li>
 									<li>No corpo do e-mail deverá conter as seguintes informações:</li>
 									<ul>
@@ -960,7 +973,7 @@
 										<li>Informação de apresentação: <strong>Comunicação oral ou Painel</strong></li>
 									</ul>
 									<li>É vedada a identificação do(s) autor(es) no corpo do texto completo anexado.</li>
-									<li>Cada autor(a) poderá enviar apenas 01 (um) texto completos (Comunicação Oral ou Painel) para submissão e avaliação do Comitê Científico do I Fórum da Rede de Gestão Pública do Piauí.</li>
+									<li>Cada autor(a) poderá enviar apenas 01 (um) texto completos (Comunicação Oral ou Painel) para submissão e avaliação do Comitê Científico do Fórum da Rede de Gestão Pública do Piauí.</li>
 									<li>Cada trabalho pode ter, no máximo, 3 autores.</li>
 								</ul>
 							</div>
@@ -988,12 +1001,15 @@
 									<li>Sugere-se um número de até 12 slides para a apresentação do trabalho, e que as informações sejam organizadas e apresentadas de forma clara e objetiva</li>
 									<li>Objetivando o bom debate, recomenda-se a leitura prévia dos trabalhos que compõem a sessão em que irá apresentar, os quais serão disponibilizados no site</li>
 								</ul>
+								<a href="assets/pdfs/Template.pptx" style="text-align: center;font-weight: bold;font-size: 1.5em;">Template para Comunicação Oral.</a>
+								<a href="assets/pdfs/Modelo.odt" style="text-align: center;font-weight: bold;font-size: 1.5em;">Modelo do trabalho para publicação nos anais do evento (Formato ODT).</a>
+								<a href="assets/pdfs/Modelo.pdf" style="text-align: center;font-weight: bold;font-size: 1.5em;">Modelo do trabalho para publicação nos anais do evento (Formato PDF).</a>
 							</div>
 							<div class="tab-pane fade" id="artigos_4" role="tabpanel" aria-labelledby="artigos_4_tabs">
 								<h3>Regras para Painéis</h3>
 								<ul>
 									<li>O Painel deverá tratar sobre um dos eixos temáticos enumerados nas regras gerais</li>
-									<li>O texto do painel deverá ser enviado na íntegra para a Comissão Científica do I Fórum da Rede de Gestão Pública do Piauí e deverá conter título, introdução, desenvolvimento, conclusão e referências, devendo obedecer ao seguinte formato: No mínimo 6 (seis) e no máximo 8 (oito) páginas - incluídas as referências - digitados em fonte Times New Roman, corpo 12, com espaçamento normal entre os caracteres, justificado, margens superior e esquerda em 3 cm e inferior e direita em 2 cm, espaço 1,5 cm entre as linhas e parágrafo (recuo especial/primeira linha) em 1,25 cm</li>
+									<li>O texto do painel deverá ser enviado na íntegra para a Comissão Científica do Fórum da Rede de Gestão Pública do Piauí e deverá conter título, introdução, desenvolvimento, conclusão e referências, devendo obedecer ao seguinte formato: No mínimo 6 (seis) e no máximo 8 (oito) páginas - incluídas as referências - digitados em fonte Times New Roman, corpo 12, com espaçamento normal entre os caracteres, justificado, margens superior e esquerda em 3 cm e inferior e direita em 2 cm, espaço 1,5 cm entre as linhas e parágrafo (recuo especial/primeira linha) em 1,25 cm</li>
 									<li>Os painéis deverão abordar experiências inovadoras, vivências, ‘cases’ ou outras situações experimentadas na Gestão Pública de órgãos das esferas federal, estadual ou municipal.</li>
 									<li>O autor deverá elaborar o painel conforme as normas do evento</li>
 									<li>Todas as apresentações em Painel serão realizadas simultaneamente no dia 25 de setembro, das 15h às 18h, no Espaço Rosa dos Ventos/UFPI. Para isso, o(s) autor(es) deverá(ão) estar presentes no local uma hora antes (às 14h), para o credenciamento e a montagem dos mesmos. Durante as apresentações, o(s) autor(es) deverá(ao) permanecer junto ao seu painel, para responder às questões do público presente. A partir das 17h, será permitida a circulação pela sessão para conhecer os outros trabalhos apresentados.</li>
@@ -1008,6 +1024,9 @@
 									<li>O transporte, fixação e remoção do pôster, no horário definido, ficarão a cargo do autor apresentador do Trabalho Científico.</li>
 									<li>O apresentador deverá estar à disposição dos interessados em consultar seu trabalho, durante o período reservado na programação do evento.</li>
 								</ul>
+								<a href="assets/pdfs/Template_Painel.odt" style="text-align: center;font-weight: bold;font-size: 1.5em;">Template para Painel.</a>
+								<a href="assets/pdfs/Modelo.odt" style="text-align: center;font-weight: bold;font-size: 1.5em;">Modelo do trabalho para publicação nos anais do evento (Formato ODT).</a>
+								<a href="assets/pdfs/Modelo.pdf" style="text-align: center;font-weight: bold;font-size: 1.5em;">Modelo do trabalho para publicação nos anais do evento (Formato PDF).</a>
 							</div>
 							<div class="tab-pane fade" id="artigos_5" role="tabpanel" aria-labelledby="artigos_5_tabs">
 								<h3>Eixos Temáticos</h3>
@@ -1027,9 +1046,9 @@
 									<p style="font-weight: bold; font-size: 1.5em; text-decoration-line: underline">Data de Submissão Prorrogada até 24 de setembro de 2018</p>
 									<li style="font-weight: bold;">Divulgação dos resultados da 1° etapa de submissão de trabalhos: 05/09/2018</li>
 									<li>Divulgação dos resultados da 2° etapa de submissão de trabalhos: 01/10/2018</li>
-									<li>Inscrições dos Trabalhos aprovados: 01 a 10 de outubro de 2018</li>
+									<li>Inscrições dos Trabalhos aprovados: 01 a 16 de outubro de 2018</li>
 									<li>Divulgação da programação detalhada do evento: 16/10/2018</li>
-									<li>Inscrições para o público em geral (sujeito à disponibilidade de vagas): 24/09/2018 a 12/10/2018</li>
+									<li>Inscrições para o público em geral (sujeito à disponibilidade de vagas): 24/09/2018 a 16/10/2018</li>
 									<br>
 									<li><em><strong>Obs: A submissão ocorrerá através do e-mail: forumdegestaopublica@ufpi.edu.br</strong></em></li>
 									<br><br><p>Contato: forumdegestaopublica@ufpi.edu.br /   (86) 3237-2169</p>
@@ -1052,7 +1071,7 @@
 								<div class="container-fluid">
 									<div class="row">
 										<div style="display: flex;flex-direction: column;">
-											<p style="text-align: center;font-weight: bold; margin: 1em;">Segue abaixo no link, a lista de trabalhos aprovados na 1° etapa de submissão ao I FÓRUM DA REDE DE GESTÃO PÚBLICA DO PIAUÍ </p>
+											<p style="text-align: center;font-weight: bold; margin: 1em;">Segue abaixo no link, a lista de trabalhos aprovados na 1° etapa de submissão ao FÓRUM DA REDE DE GESTÃO PÚBLICA DO PIAUÍ </p>
 											<a href="assets/pdfs/Resultados.pdf" style="text-align: center;font-weight: bold;font-size: 1.5em;">Lista de aprovados</a>
 										</div>
 									</div>
@@ -1076,7 +1095,7 @@
 								<div class="container-fluid">
 									<div class="row">
 										<div style="display: flex;flex-direction: column;">
-											<p style="text-align: center;font-weight: bold; margin: 1em;">Segue abaixo no link, a lista de trabalhos aprovados na 2° etapa de submissão ao I FÓRUM DA REDE DE GESTÃO PÚBLICA DO PIAUÍ </p>
+											<p style="text-align: center;font-weight: bold; margin: 1em;">Segue abaixo no link, a lista de trabalhos aprovados na 2° etapa de submissão ao FÓRUM DA REDE DE GESTÃO PÚBLICA DO PIAUÍ </p>
 											<a href="assets/pdfs/Resultados_2.pdf" style="text-align: center;font-weight: bold;font-size: 1.5em;">Lista de aprovados</a>
 										</div>
 									</div>
@@ -1137,7 +1156,7 @@
 							<h2 data-aos="fade-down">Apoio</h2>
 							<div class="imagem-grupo">
 								<a class="imagem">
-									<img src="assets/img/realizacao/cgu-logo.png">
+									<img src="assets/img/realizacao/Logo-CGU.png">
 								</a>
 								<a class="imagem">
 									<img src="assets/img/realizacao/tcu-logo.png">
@@ -1147,6 +1166,9 @@
 								</a>
 								<a class="imagem">
 									<img src="assets/img/realizacao/logo-ministerio.png">
+								</a>
+								<a class="imagem">
+									<img src="assets/img/realizacao/Logo_CREA-PI.png">
 								</a>
 								<a class="imagem" href="http://factos.ufpi.br/" target="_blank">
 									<img src="assets/img/realizacao/logo-factos.svg">
@@ -1164,18 +1186,23 @@
 				<div class="row">
 					<div class="col-md-6" data-aos="fade-right">
 						<div class="info">
-							<h3>I Fórum da rede de gestão pública do Píaui</h3>	
+							<h3>Fórum da Rede de Gestão Pública do Píaui</h3>	
 							<p><i class="fas fa-map-marker"></i> &nbsp; CCHL</p>
 							<p><i class="far fa-calendar-alt"></i> &nbsp; Início: 24 de outubro</p>
 						</div>
 						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3974.2836491697135!2d-42.79967728464082!3d-5.057700596328983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x78e3977df8aa797%3A0xb4bd89b68e5e57c8!2sCentro+de+Ci%C3%AAncias+Humanas+e+Letras+-+CCHL%2FUFPI!5e0!3m2!1spt-BR!2sbr!4v1529795995837" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+					</div>
+					<div class="col-lg-5">
+						<h3>Nossas redes sociais</h3>
+						<div><i class="fab fa-instagram"></i><a href="https://www.instagram.com/regepippgp/">@regepippgp</a></div>
+						<div><i class="fab fa-facebook"></i><a href="https://www.facebook.com/F%C3%B3rum-da-Rede-de-Gest%C3%A3o-P%C3%BAblica-do-Piau%C3%AD-659170231097144/">Facebook</a></div>
 					</div>
 				</div>
 			</div>
 		</section>
 		
 		<footer>
-			&copy; 2018 REGEP. Todos os direitos reservados | Desenvolvido por:
+			&copy; 2018 REGEPI. Todos os direitos reservados | Desenvolvido por:
 			<a class="dev" href="http://factos.ufpi.br" target="_blank"> FACTOS</a>
 			<a href="#" class="Topo"><i class="fas fa-arrow-up"></i></a>
 		</footer>
