Adcionado os arquivos com localizacao, a logo do cra, alterado o local das atividades iniciais, e trocado o local dentro das regras para paineis

--- a/index.html
+++ b/index.html
@@ -213,12 +213,12 @@
 										<tr>
 											<td><i class="far fa-clock"></i>&nbsp; 16:00 - 18:00</td>
 											<td>Credenciamento</td>
-											<td><i class="fas fa-map-marker-alt"></i>&nbsp; Cineteatro</td>
+											<td><i class="fas fa-map-marker-alt"></i>&nbsp; Auditório do CT</td>
 										</tr>
 										<tr>
 											<td><i class="far fa-clock"></i>&nbsp; 18:00 - 19:00</td>
 											<td>Abertura</td>
-											<td><i class="fas fa-map-marker-alt"></i>&nbsp; Cineteatro</td>
+											<td><i class="fas fa-map-marker-alt"></i>&nbsp; Auditório do CT</td>
 										</tr>
 										<tr>
 											<td><i class="far fa-clock"></i>&nbsp; 19:00 - 20:00</td>
@@ -229,7 +229,7 @@
 												<br>Palestra: <strong>NOVO MARCO LEGAL DE CT&I E A INOVAÇÃO NA GESTÃO PÚBLICA</strong>
 												<br><em>Participação do Reitor da UFPI Prof. Dr. José Arimateia Dantas Lopes</em>
 											</td>
-											<td><i class="fas fa-map-marker-alt"></i>&nbsp; Cineteatro </td>
+											<td><i class="fas fa-map-marker-alt"></i>&nbsp; Auditório do CT</td>
 										</tr>
 									</tbody>
 								</table>
@@ -1012,7 +1012,7 @@
 									<li>O texto do painel deverá ser enviado na íntegra para a Comissão Científica do Fórum da Rede de Gestão Pública do Piauí e deverá conter título, introdução, desenvolvimento, conclusão e referências, devendo obedecer ao seguinte formato: No mínimo 6 (seis) e no máximo 8 (oito) páginas - incluídas as referências - digitados em fonte Times New Roman, corpo 12, com espaçamento normal entre os caracteres, justificado, margens superior e esquerda em 3 cm e inferior e direita em 2 cm, espaço 1,5 cm entre as linhas e parágrafo (recuo especial/primeira linha) em 1,25 cm</li>
 									<li>Os painéis deverão abordar experiências inovadoras, vivências, ‘cases’ ou outras situações experimentadas na Gestão Pública de órgãos das esferas federal, estadual ou municipal.</li>
 									<li>O autor deverá elaborar o painel conforme as normas do evento</li>
-									<li>Todas as apresentações em Painel serão realizadas simultaneamente no dia 25 de setembro, das 15h às 18h, no Espaço Rosa dos Ventos/UFPI. Para isso, o(s) autor(es) deverá(ão) estar presentes no local uma hora antes (às 14h), para o credenciamento e a montagem dos mesmos. Durante as apresentações, o(s) autor(es) deverá(ao) permanecer junto ao seu painel, para responder às questões do público presente. A partir das 17h, será permitida a circulação pela sessão para conhecer os outros trabalhos apresentados.</li>
+									<li>Todas as apresentações em Painel serão realizadas simultaneamente no dia 25 de setembro, das 15h às 18h, no Hall 1 do Centro de Ciências Humanas e Letras (CCHL). Para isso, o(s) autor(es) deverá(ão) estar presentes no local uma hora antes (às 14h), para o credenciamento e a montagem dos mesmos. Durante as apresentações, o(s) autor(es) deverá(ao) permanecer junto ao seu painel, para responder às questões do público presente. A partir das 17h, será permitida a circulação pela sessão para conhecer os outros trabalhos apresentados.</li>
 									<li>O(s) autor(es) deve(m) ter em mente que o painel deve ser simples e autoexplicativo.</li>
 									<li>Cada trabalho apresentado na forma de pôster terá direito a uma área de painel de 0,90m de largura por 1,20m de altura (formato retrato) e, que possam ser pendurados nos painéis presentes no local da sessão de pôster.</li>
 									<li>O pôster deverá conter basicamente a seguinte sequência: Título; Autores (com as respectivas instituições e e-mail de contato); Introdução; Objetivos; Material e Métodos; Resultados; Conclusão; Referências. </li>
@@ -1108,6 +1108,32 @@
 			</div>
 		</section>
 
+		<section id="artigos" class="sub-trabalhos">
+			<h2 data-aos="fade-left">Locais de apresentação</h2>
+			<div class='container-fluid'>
+				<div class='row'>
+					<div class="col-md-3"></div>
+					<div class="col-md-6">
+						<div data-aos="fade-right" class="card card-shadow">
+							<figure>
+								<div class="container-fluid">
+									<div class="row">
+										<div style="display: flex;flex-direction: column;">
+											<p style="text-align: center;font-weight: bold; margin: 1em;">Segue abaixo o arquivo contendo os locais de apresentação dos painéis e da comunicação oral.</p>
+											<a href="assets/pdfs/LOCAL_DE_APRESENTAÇÃO_PAINEL.pdf" style="text-align: center;font-weight: bold;font-size: 1.5em;">Locais de apresentação dos painéis</a>
+											<a href="assets/pdfs/LOCAL_DE_APRESENTAÇÃO COMUNICAÇÃO_ORAL.pdf" style="text-align: center;font-weight: bold;font-size: 1.5em;">Locais de apresentação da comunicação oral.</a>
+										</div>
+									</div>
+								</div>
+							</figure>
+						</div>
+					</div>
+					
+				</div>
+			</div>
+		</section>
+
+
 		<section id="hospedagem">
 			<h2 data-aos="zoom-in-up">Hospedagem</h2>
 			<div class="container-fluid">
@@ -1172,6 +1198,9 @@
 								</a>
 								<a class="imagem" href="http://factos.ufpi.br/" target="_blank">
 									<img src="assets/img/realizacao/logo-factos.svg">
+								</a>
+								<a class="imagem">
+									<img src="assets/img/realizacao/logo-cra.png">
 								</a>
 							</div>
 						</div>
