--- a/index.html
+++ b/index.html
@@ -1120,8 +1120,8 @@
 									<div class="row">
 										<div style="display: flex;flex-direction: column;">
 											<p style="text-align: center;font-weight: bold; margin: 1em;">Segue abaixo o arquivo contendo os locais de apresentação dos painéis e da comunicação oral.</p>
-											<a href="assets/pdfs/LOCAL_DE_APRESENTAÇÃO_PAINEL.pdf" style="text-align: center;font-weight: bold;font-size: 1.5em;">Locais de apresentação dos painéis</a>
-											<a href="assets/pdfs/LOCAL_DE_APRESENTAÇÃO COMUNICAÇÃO_ORAL.pdf" style="text-align: center;font-weight: bold;font-size: 1.5em;">Locais de apresentação da comunicação oral.</a>
+											<a href="assets/pdfs/LOCAL_PAINEL.pdf" style="text-align: center;font-weight: bold;font-size: 1.5em;">Locais de apresentação dos painéis</a>
+											<a href="assets/pdfs/LOCAL_COMUNICAC.pdf" style="text-align: center;font-weight: bold;font-size: 1.5em;">Locais de apresentação da comunicação oral.</a>
 										</div>
 									</div>
 								</div>
