Anais da comunicacao oral incluidos

--- a/index.html
+++ b/index.html
@@ -178,6 +178,43 @@
 		</div>
 		
 		<section id="programacao">
+			<h2 data-aos="fade-up">Anais</h2>
+			<div data-aos="zoom-in" class="container-fluid">
+					<div class="row">
+					<div class="col-md-12">
+						<!-- Tab panes -->
+						<div class="tab-content">	
+								<div role="tabpanel" class="tab-pane active" id="segunda">
+									<table class="table table-striped">
+										<tbody>
+											<tr>
+												<td>Anais de avaliação de desempenho humano</td>
+												<td><i class="fas fa-download"></i>&nbsp;<a href="assets/pdfs/ANAIS_DESEMPENHO_HUMANO.pdf">Download do arquivo</a></td>
+											</tr>
+												<td>Anais de controle, transparência e eficiência</td>
+												<td><i class="fas fa-download"></i>&nbsp; <a href="assets/pdfs/ANAIS_CONTROLE_TRANSPARENCIA.pdf">Download do arquivo</a></td>
+											</tr>
+											<tr>
+												<td>Anais de gestão participativa</td>
+												<td><i class="fas fa-download"></i>&nbsp; <a href="assets/pdfs/ANAIS_GESTAO_PARTICIPATIVA.pdf">Download do arquivo</a></td>
+											</tr>
+											<tr>
+												<td>Anais de licitação</td>
+												<td><i class="fas fa-download"></i>&nbsp; <a href="assets//pdfs/ANAIS_LICITACAO.pdf">Download do arquivo</a></td>
+											</tr>
+											<tr>
+												<td>Anais de sustentabilidade</td>
+												<td><i class="fas fa-download"></i>&nbsp; <a href="assets/pdfs/ANAIS_SUSTENTABILIDADE.pdf">Download do arquivo</a></td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+					</div>
+					</div>
+			</div>
+		</section>
+
+		<section id="programacao">
 			<h2 data-aos="fade-up">Programação</h2>
 			<div data-aos="zoom-in" class="container-fluid">
 			
