--- a/index.html
+++ b/index.html
@@ -188,22 +188,32 @@
 									<table class="table table-striped">
 										<tbody>
 											<tr>
+												<td>Anais dos painéis</td>
+												<td>Painel</td>
+												<td><i class="fas fa-download"></i>&nbsp;<a href="assets/pdfs/Anais_Paineis.pdf">Download do arquivo</a></td>
+											</tr>
+											<tr>
 												<td>Anais de avaliação de desempenho humano</td>
+												<td>Comunicação Oral</td>
 												<td><i class="fas fa-download"></i>&nbsp;<a href="assets/pdfs/ANAIS_DESEMPENHO_HUMANO.pdf">Download do arquivo</a></td>
 											</tr>
 												<td>Anais de controle, transparência e eficiência</td>
+												<td>Comunicação Oral</td>
 												<td><i class="fas fa-download"></i>&nbsp; <a href="assets/pdfs/ANAIS_CONTROLE_TRANSPARENCIA.pdf">Download do arquivo</a></td>
 											</tr>
 											<tr>
 												<td>Anais de gestão participativa</td>
+												<td>Comunicação Oral</td>
 												<td><i class="fas fa-download"></i>&nbsp; <a href="assets/pdfs/ANAIS_GESTAO_PARTICIPATIVA.pdf">Download do arquivo</a></td>
 											</tr>
 											<tr>
 												<td>Anais de licitação</td>
+												<td>Comunicação Oral</td>
 												<td><i class="fas fa-download"></i>&nbsp; <a href="assets//pdfs/ANAIS_LICITACAO.pdf">Download do arquivo</a></td>
 											</tr>
 											<tr>
 												<td>Anais de sustentabilidade</td>
+												<td>Comunicação Oral</td>
 												<td><i class="fas fa-download"></i>&nbsp; <a href="assets/pdfs/ANAIS_SUSTENTABILIDADE.pdf">Download do arquivo</a></td>
 											</tr>
 										</tbody>
